fixed overlay occupying extra space

--- a/md.html.css
+++ b/md.html.css
@@ -105,11 +105,10 @@ th {
 }
 
 #popup-overlay {
-  visibility: hidden;
   position: absolute;
   height: 100vh;
   width: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   background-color: #80808099;
